# Instant-Messaging

./: README.md  terminaux.sh
src/: CMakeLists.txt
src/jalon06/: CMakeLists.txt
src/jalon06/client/: client.c  client.h  client_lib.c  client_lib.h
src/jalon06/commons/: colors.h  contrib.c  contrib.h  file.c  file.h  network.c  network.h
src/jalon06/server/: callbacks.c  callbacks.h  salon.c  salon.h  server.h  server_app.c  server_lib.c  server_lib.h  user.c  user.h
